<resources>
    <string name="app_name">Online Waiter</string>
    <string name="btn_login">Login</string>
    <string name="btn_application">Aplikacija</string>
    <string name="dialog_alert_phone_number">I Understand</string>
    <string name="dialog_alert_phone_number_body">You need to allow Phone Number permission. If you disable this permission, You will not able to procced!</string>
    <string name="dialog_show_app_purpose">This application is made for waiters and cafe owners who are registered in our system.
        The application allows waiters to quickly execute orders and control drinks in their place of business.
        We provide the owners with an overview of the facility\'s operations</string>
    <string name="dialog_show_open_privacy_policy">Privacy Policy</string>
    <string name="dialog_show_close">Exit</string>
    <string name="dialog_show_privacy_policy">The application requires the waiter to access the number of the device with which he will use this application.
        And access to media content when adding an image for a new drink. The application does not require other access to your device!
        It is the duty of the waiter to use the application in accordance with the rules of his employer. Our duty is the security of your data.</string>
    <string name="open_web_privacy_policy">More about privacy</string>
    <string name="tv_enter_phone_number">Enter phone number</string>
    <string name="phone_number_example">+1 650–555–1234</string>
    <string name="one_time_password">Enter received OTP</string>
    <string name="send_message_on_phone_number">Send phone number</string>
    <string name="Verify_otp">Verify OTP</string>
    <string name="phone_number_validation_failed">Enter valid phone Number</string>
    <string name="phone_number_not_sent">Please enter your number independently.</string>
    <string name="login_verification_failed">Verification Failed! Check entered number.</string>
    <string name="login_code_sent">Code Sent!</string>
    <string name="login_empty_otp">Enter OTP code!</string>
    <string name="login_wrong_otp">Wrong OTP code!</string>
    <string name="login_user_not_found">Your number was not found, please try again</string>
    <string name="unknown_error">Error!</string>
    <string name="logged_employee_not_found">We did not find your data, log out and try again. In the current state, errors are possible during your work!</string>
    <string name="logged_employee_cafe_not_found">We did not find cafe data, log out and try again. In the current state, errors are possible during your work!</string>
    <string name="unknown_employee_cafe_name">We could not find the name of the cafe you work in, please log out and try again. Possible errors in the continuation of your work!</string>
    <string name="cart_products_number">It is in the cart:</string>
    <string name="cart_products_txt">products</string>
    <string name="title_activity_home">Home2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="nav_menu">Order</string>
    <string name="nav_cart">Cart</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Logout</string>
    <string name="back_button_pressed">One more time to logout</string>
    <string name="cart_drink_amount">Amount: </string>
    <string name="cart_drink_price">Price: </string>
    <string name="cart_drink_total_price">Total price: </string>
    <string name="cart_bill_confirm">Confirm</string>
    <string name="cart_bill_amount_empty">No products</string>
    <string name="cart_bill_price_empty">0.00€</string>
    <string name="cart_bill_amount_text">Products</string>
    <string name="cafe_bill_completed">Successfully saved bill:</string>
    <string name="cart_dialog_title_text">Select table number</string>
    <string name="cart_dialog_positive_text">Make bill</string>
    <string name="cart_dialog_negative_text">Cancel</string>
    <string name="settings_update_drinks_text">Update menu</string>
    <string name="settings_add_drink_text">Add new drink</string>
    <string name="settings_update_tables_text">Update tables number</string>
    <string name="settings_dialog_title_text">Enter new tables state</string>
    <string name="settings_dialog_current_tables_txt">Currently tables:</string>
    <string name="settings_dialog_new_tables_number_txt">New state:</string>
    <string name="settings_dialog_hint">15</string>
    <string name="settings_dialog_starting_zero">The starting digit cannot be 0</string>
    <string name="settings_dialog_zero_greater">Enter a value greater than 0</string>
    <string name="settings_dialog_successful">Changed successfully</string>
    <string name="settings_dialog_drink_name">Drink name</string>
    <string name="settings_dialog_drink_description">Drink description</string>
    <string name="settings_dialog_drink_price">Drink price</string>
    <string name="settings_dialog_drink_name_overflow">Name accepts 25 characters</string>
    <string name="settings_dialog_drink_description_overflow">Description accepts 50 characters</string>
    <string name="settings_dialog_drink_price_overflow">Max drink price is 999999.99</string>
    <string name="settings_bottom_dialog_camera">Camera</string>
    <string name="settings_bottom_dialog_gallery">Gallery</string>
    <string name="settings_dialog_add_drink_title">New drink for category:</string>
    <string name="settings_new_drink_sucess">New drink successfully added</string>
    <string name="settings_new_drink_failure">An error occurred!</string>
    <string name="settings_new_drink_uploading">Adding a new drink…</string>
    <string name="settings_new_drink_image_failure">Drink image error, new drink not created!</string>
    <string name="settings_new_drink_price_incorrect_input">Incorrect price input</string>
    <string name="settings_new_drink_image_upload_failed">Failed to save image</string>
    <string name="settings_new_drink_image_download_failed">Failed to get image</string>
    <string name="euro_sign" translatable="false">€</string>
    <string name="drink_deleted">Drink Deleted!</string>
    <string name="drink_delete_confirm">Delete this drink?</string>
    <string name="drink_name_update_condition">Drink name 1–25 characters</string>
    <string name="drink_description_update_condition">Drink description 1–50 characters</string>
    <string name="drink_price_update_condition">Drink price 0–999999.99€</string>
    <string name="drink_same_update">No change to update</string>
    <string name="settings_update_drink_uploading">Updating a drink…</string>
    <string name="settings_update_drink_uploading_image">Updating a drink image…</string>
    <string name="settings_update_uploading_failed">Action aborted, server error!</string>
    <string name="settings_update_uploading_image_failed">Server error, unable to retrieve image!</string>
    <string name="drink_full_description">Description for drink:</string>
    <string name="title_activity_boss">BossActivity</string>
    <string name="bottom_nav_title_home">Home</string>
    <string name="bottom_nav_title_employees">Employees</string>
    <string name="bottom_nav_title_logout">Logout</string>
    <string name="logout_text">Logout, goodbye</string>
    <string name="bar_chart_description">Bills made</string>
    <string name="no_bar_chart">No created bills statistic to display</string>
    <string name="boss_home_tables_cv">Tables in your cafe</string>
    <string name="boss_home_employees_cv">Employees in your cafe</string>
    <string name="boss_home_categories_cv">Categories in your cafe</string>
    <string name="boss_home_drinks_cv">Drinks in your cafe</string>
    <string name="boss_home_number_cv">Phone number</string>
    <string name="boss_home_employee_cv">Employee</string>

</resources>