<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_baseline_local_drink_24"
            android:title="@string/nav_menu" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:title="@string/nav_cart" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_language_24"
            android:title="@string/nav_settings" />
        <!--"dummy" item for extra space-->
        <item
            android:title=""
            android:enabled="false"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/nav_logout" />
    </group>
</menu>