<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_menu">

    <fragment
        android:id="@+id/nav_menu"
        android:name="com.example.onlinekonobar.ui.gallery.GalleryFragment"
        android:label="@string/nav_menu"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.example.onlinekonobar.ui.home.HomeFragment"
        android:label="@string/nav_cart"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.onlinekonobar.ui.slideshow.SlideshowFragment"
        android:label="@string/nav_settings"
        tools:layout="@layout/fragment_slideshow" />
</navigation>