<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/login_background_dark"
    >

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="32dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:gravity="center_horizontal"
            android:text="@string/tv_enter_phone_number"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etEnteredPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/black"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_contact_icon"
            android:drawablePadding="16sp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:hint="@string/phone_number_example"
            android:textColorHint="@color/black"
            android:maxLength="13"
            android:inputType="phone" />

        <Button
            android:id="@+id/btnGenerateOtp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/send_message_on_phone_number"
            android:textSize="20sp" />

        <ProgressBar
            android:id="@+id/loginProgessBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:indeterminateTint="@color/light_cyan"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/etEnteredRecivedOtp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/black"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_otp_icon"
            android:drawablePadding="16sp"
            android:hint="@string/one_time_password"
            android:textColorHint="@color/black"
            android:maxLength="6"
            android:inputType="number" />

        <Button
            android:id="@+id/btnVerifyOtp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:enabled="false"
            android:text="@string/Verify_otp"
            android:textSize="20sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>