<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_login_06"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glhLoginHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.18" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:padding="5sp"
        android:textColor="@color/black"
        android:background="@color/light_cyan"
        app:layout_constraintBottom_toTopOf="@+id/glhLoginHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent">


        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:text="@string/btn_login"
            android:textSize="32sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>
<!--
    <View
        android:id="@+id/divider"
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/divider2"
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toStartOf="@+id/textView" />

    <View
        android:id="@+id/divider3"
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toEndOf="@+id/textView" />

    <View
        android:id="@+id/divider4"
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toStartOf="@+id/btnApplication" />

    <View
        android:id="@+id/divider5"
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toEndOf="@+id/btnApplication" />
        -->

    <Button
        android:id="@+id/btnApplication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:backgroundTint="@color/tumbleweed"
        android:drawableEnd="@drawable/ic_question_mark_20"
        android:text="@string/btn_application"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>