<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cart.CartFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/card_bill_sumarry"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        app:cardMaxElevation="12dp"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/drink_card_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/cart_summary_details"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/cartBillCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:backgroundTint="@color/drink_remove_button"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:src="@drawable/ic_clear_16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cartBillAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/cart_bill_amount_empty"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cartBillCancel"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cartBillPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cart_bill_price_empty"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/cartBillAccept"
                app:layout_constraintStart_toEndOf="@+id/cartBillAmount"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/cartBillAccept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="0dp"
                android:text="@string/cart_bill_confirm"
                android:layout_marginRight="16dp"
                android:backgroundTint="@color/drink_add_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCartDrinks"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_bill_sumarry" />
</androidx.constraintlayout.widget.ConstraintLayout>